--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^6.3.1"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "reset-css": "^5.0.2"
   }
 }
