--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite": "^6.3.1"
   },
   "dependencies": {
+    "choices.js": "^11.1.0",
     "normalize.css": "^8.0.1",
     "reset-css": "^5.0.2"
   }
